<resources>
    <string name="app_name">有食候</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_maps_key">AIzaSyCk6jWnTfDNWx-iNwUOmA_oePtLQ7WkBu0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">餐廳列表</string>
    <string name="title_search">搜尋</string>
    <string name="title_info">收藏</string>
    <string name="title_notifications">個人設定</string>
    <string name="account">登入帳號</string>
    <string name="logo">logo</string>
    <string name="password">登入密碼</string>
    <string name="checkPassword">確認密碼</string>
    <string name="name">姓名</string>
    <string name="email">E-mail</string>
    <string name="phone">手機電話</string>
    <string name="text_Reserve">我要訂位</string>
    <string name="text_Waiting">我要候位</string>

    <string name="get_waiting_list_api">http://cw30cmweb.com/api/Waiting/GetIsWaiting/</string>
    <string name="get_received_coupon_api">http://cw30cmweb.com/api/Coupon/GetReceivedCoupons/</string>
    <string name="restaurant_list_api">http://cw30cmweb.com/api/Restaurant/GetList</string>
    <string name="get_feedback_api">http://cw30cmweb.com/api/Feedback/GetFeedbackList/</string>
    <string name="get_menu_api">http://cw30cmweb.com/api/Restaurant/GetMenu/</string>
    <string name="get_r_coupon_api">http://cw30cmweb.com/api/Coupon/GetCoupons/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_restaurant_info">RestaurantInfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
